<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/statisticsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.difusal.montyhallproblem.StatisticsActivity">

    <TextView
        android:id="@+id/nPlays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1"
        android:text="@string/label_times_played"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp" />

    <RelativeLayout
        android:id="@+id/swapsRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.45">

        <TextView
            android:id="@+id/nSwaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/label_times_swapped"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/nSwapWins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nSwaps"
            android:text="@string/label_times_swapped_and_won" />

        <TextView
            android:id="@+id/nSwapLost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/nSwaps"
            android:text="@string/label_times_swapped_and_lost" />

        <FrameLayout
            android:id="@+id/swapGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nSwapWins"
            android:paddingTop="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.45">

        <TextView
            android:id="@+id/nKeeps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/label_times_kept"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/nKeepWins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nKeeps"
            android:text="@string/label_times_kept_and_won" />

        <TextView
            android:id="@+id/nKeepLost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/nKeeps"
            android:text="@string/label_times_kept_and_lost" />

        <FrameLayout
            android:id="@+id/keepGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nKeepWins"
            android:paddingTop="5dp" />

    </RelativeLayout>

</LinearLayout>
